--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 </head>
 <body>
     <header>
-        Drag and Drop
-        <br>
-        Dario Miguel Moreno González
+        Drag and Drop<br>Dario Miguel Moreno González
     </header>
+
+    <div class="contenedores">
+        <img src="/images/lebron.jpg" width="400px">
+    </div>
+    <div class="contenedores"></div>
+    <script src="/js/scripts.js"></script>
 </body>
 </html>
