falta todos menos lo visual

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
         Drag and Drop<br>Dario Miguel Moreno González
     </header>
 
+    <div class="espacio">
     <div class="contenedores">
-        <img src="/images/lebron.jpg" width="400px">
+        <img src="/images/lebron.jpg" draggable="true" width="400px">
     </div>
     <div class="contenedores"></div>
+    </div>
+
+    <p>Acción que se esta realizando</p>
     <script src="/js/scripts.js"></script>
 </body>
 </html>
