--- a/index.html
+++ b/index.html
@@ -15,18 +15,13 @@
     </header>
 
     <div class="espacio">
-        <div class="contenedores" id="cont1">
-            <img src="/images/lebron.jpg" draggable="true" width="400px">
+        <div id="cont1">
+            <img src="/images/lebron.jpg" id="objeto" draggable="true" width="400px">
         </div>
-        <div class="contenedores" id="cont2"></div>
+        <div class="droptarget" id="cont2"></div>
     </div>
 
-    <p id="info">Acción que se esta realizando</p>
+    <p id="info">¿Qué está pasando?</p>
     <script src="/js/scripts.js"></script>
 </body>
 </html>
-
-<!--        <div class="contenedores" id="cont1" ondrop="drop(event)" ondragover="allowDrop(event)">
-            <img src="/images/lebron.jpg" draggable="true" ondragstart="drag(event)" id="drag1" width="400px">
-        </div>
-        <div class="contenedores" id="cont2" ondrop="drop(event)" ondragover="allowDrop(event)""></div>-->
