--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <div class="droptarget" id="cont2"></div>
     </div>
 
-    <p id="info">¿Qué está pasando?</p>
+    <p id="info">¿Qué está haciendo LeBron?</p>
     <script src="/js/scripts.js"></script>
 </body>
 </html>
